grammar/HelloParser.cpp

    #include <vector>


// Generated from ./Hello.g4 by ANTLR 4.13.1


#include "HelloVisitor.h"

#include "HelloParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct HelloParserStaticData final {
  HelloParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  HelloParserStaticData(const HelloParserStaticData&) = delete;
  HelloParserStaticData(HelloParserStaticData&&) = delete;
  HelloParserStaticData& operator=(const HelloParserStaticData&) = delete;
  HelloParserStaticData& operator=(HelloParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag helloParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
HelloParserStaticData *helloParserStaticData = nullptr;

void helloParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (helloParserStaticData != nullptr) {
    return;
  }
#else
  assert(helloParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<HelloParserStaticData>(
    std::vector<std::string>{
      "compUnit", "decl", "constdecl", "bType", "constDef", "constInitVal", 
      "vardecl", "varDefArray", "constInitValArray", "varDef", "funcDef", 
      "funcType", "funcFParams", "funcFParam", "block", "blockItem", "stmt", 
      "exp", "constExp", "cond", "lVal", "number", "funcRParams", "primaryExp", 
      "unaryExp", "mulExp", "addExp", "relExp", "eqExp", "lAndExp", "lOrExp"
    },
    std::vector<std::string>{
      "", "'const'", "'int'", "'double'", "'char'", "'float'", "'void'", 
      "'if'", "'else'", "'while'", "'break'", "'continue'", "'return'", 
      "'['", "']'", "'('", "')'", "'+'", "'-'", "'!'", "'*'", "'/'", "'%'", 
      "'<='", "'<'", "'>='", "'>'", "'=='", "'!='", "'&&'", "'||'", "';'", 
      "','", "'='", "'.'", "'{'", "'}'"
    },
    std::vector<std::string>{
      "", "CONST_KW", "INT_KW", "DOUBLE_KW", "CHAR_KW", "FLOAT_KW", "VOID_KW", 
      "IF_KW", "ELSE_KW", "WHILE_KW", "BREAK_KW", "CONTINUE_KW", "RETURN_KW", 
      "LeftBracket", "RightBracket", "LeftParen", "RightParen", "Plus", 
      "Minus", "Not", "Star", "Div", "Mod", "LessEqual", "Less", "GreaterEqual", 
      "Greater", "Equal", "NotEqual", "AndAnd", "OrOr", "Semi", "Comma", 
      "Assign", "Dot", "LeftBrace", "RightBrace", "Ident", "IntConst", "HexadecConst", 
      "OctalConst", "DecimalConst", "FloatConst", "NewLine", "WhiteSpace", 
      "LineComment", "BlockComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  helloParserStaticData = staticData.release();
}

}

HelloParser::HelloParser(TokenStream *input) : HelloParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

HelloParser::HelloParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  HelloParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *helloParserStaticData->atn, helloParserStaticData->decisionToDFA, helloParserStaticData->sharedContextCache, options);
}

HelloParser::~HelloParser() {
  delete _interpreter;
}

const atn::ATN& HelloParser::getATN() const {
  return *helloParserStaticData->atn;
}

std::string HelloParser::getGrammarFileName() const {
  return "Hello.g4";
}

const std::vector<std::string>& HelloParser::getRuleNames() const {
  return helloParserStaticData->ruleNames;
}

const dfa::Vocabulary& HelloParser::getVocabulary() const {
  return helloParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView HelloParser::getSerializedATN() const {
  return helloParserStaticData->serializedATN;
}


//----------------- CompUnitContext ------------------------------------------------------------------

HelloParser::CompUnitContext::CompUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HelloParser::CompUnitContext::EOF() {
  return getToken(HelloParser::EOF, 0);
}

std::vector<HelloParser::DeclContext *> HelloParser::CompUnitContext::decl() {
  return getRuleContexts<HelloParser::DeclContext>();
}

HelloParser::DeclContext* HelloParser::CompUnitContext::decl(size_t i) {
  return getRuleContext<HelloParser::DeclContext>(i);
}

std::vector<HelloParser::FuncDefContext *> HelloParser::CompUnitContext::funcDef() {
  return getRuleContexts<HelloParser::FuncDefContext>();
}

HelloParser::FuncDefContext* HelloParser::CompUnitContext::funcDef(size_t i) {
  return getRuleContext<HelloParser::FuncDefContext>(i);
}


size_t HelloParser::CompUnitContext::getRuleIndex() const {
  return HelloParser::RuleCompUnit;
}


std::any HelloParser::CompUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitCompUnit(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::CompUnitContext* HelloParser::compUnit() {
  CompUnitContext *_localctx = _tracker.createInstance<CompUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, HelloParser::RuleCompUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(64);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(62);
        decl();
        break;
      }

      case 2: {
        setState(63);
        funcDef();
        break;
      }

      default:
        break;
      }
      setState(66); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 118) != 0));
    setState(68);
    match(HelloParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

HelloParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::ConstdeclContext* HelloParser::DeclContext::constdecl() {
  return getRuleContext<HelloParser::ConstdeclContext>(0);
}

HelloParser::VardeclContext* HelloParser::DeclContext::vardecl() {
  return getRuleContext<HelloParser::VardeclContext>(0);
}


size_t HelloParser::DeclContext::getRuleIndex() const {
  return HelloParser::RuleDecl;
}


std::any HelloParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::DeclContext* HelloParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 2, HelloParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(72);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HelloParser::CONST_KW: {
        enterOuterAlt(_localctx, 1);
        setState(70);
        constdecl();
        break;
      }

      case HelloParser::INT_KW:
      case HelloParser::CHAR_KW:
      case HelloParser::FLOAT_KW: {
        enterOuterAlt(_localctx, 2);
        setState(71);
        vardecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstdeclContext ------------------------------------------------------------------

HelloParser::ConstdeclContext::ConstdeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HelloParser::ConstdeclContext::CONST_KW() {
  return getToken(HelloParser::CONST_KW, 0);
}

HelloParser::BTypeContext* HelloParser::ConstdeclContext::bType() {
  return getRuleContext<HelloParser::BTypeContext>(0);
}

std::vector<HelloParser::ConstDefContext *> HelloParser::ConstdeclContext::constDef() {
  return getRuleContexts<HelloParser::ConstDefContext>();
}

HelloParser::ConstDefContext* HelloParser::ConstdeclContext::constDef(size_t i) {
  return getRuleContext<HelloParser::ConstDefContext>(i);
}

tree::TerminalNode* HelloParser::ConstdeclContext::Semi() {
  return getToken(HelloParser::Semi, 0);
}

std::vector<tree::TerminalNode *> HelloParser::ConstdeclContext::Comma() {
  return getTokens(HelloParser::Comma);
}

tree::TerminalNode* HelloParser::ConstdeclContext::Comma(size_t i) {
  return getToken(HelloParser::Comma, i);
}


size_t HelloParser::ConstdeclContext::getRuleIndex() const {
  return HelloParser::RuleConstdecl;
}


std::any HelloParser::ConstdeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitConstdecl(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::ConstdeclContext* HelloParser::constdecl() {
  ConstdeclContext *_localctx = _tracker.createInstance<ConstdeclContext>(_ctx, getState());
  enterRule(_localctx, 4, HelloParser::RuleConstdecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(HelloParser::CONST_KW);
    setState(75);
    bType();
    setState(76);
    constDef();
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HelloParser::Comma) {
      setState(77);
      match(HelloParser::Comma);
      setState(78);
      constDef();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    match(HelloParser::Semi);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BTypeContext ------------------------------------------------------------------

HelloParser::BTypeContext::BTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HelloParser::BTypeContext::INT_KW() {
  return getToken(HelloParser::INT_KW, 0);
}

tree::TerminalNode* HelloParser::BTypeContext::FLOAT_KW() {
  return getToken(HelloParser::FLOAT_KW, 0);
}

tree::TerminalNode* HelloParser::BTypeContext::CHAR_KW() {
  return getToken(HelloParser::CHAR_KW, 0);
}


size_t HelloParser::BTypeContext::getRuleIndex() const {
  return HelloParser::RuleBType;
}


std::any HelloParser::BTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitBType(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::BTypeContext* HelloParser::bType() {
  BTypeContext *_localctx = _tracker.createInstance<BTypeContext>(_ctx, getState());
  enterRule(_localctx, 6, HelloParser::RuleBType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 52) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDefContext ------------------------------------------------------------------

HelloParser::ConstDefContext::ConstDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HelloParser::ConstDefContext::Ident() {
  return getToken(HelloParser::Ident, 0);
}

tree::TerminalNode* HelloParser::ConstDefContext::Assign() {
  return getToken(HelloParser::Assign, 0);
}

HelloParser::ConstInitValContext* HelloParser::ConstDefContext::constInitVal() {
  return getRuleContext<HelloParser::ConstInitValContext>(0);
}

std::vector<tree::TerminalNode *> HelloParser::ConstDefContext::LeftBracket() {
  return getTokens(HelloParser::LeftBracket);
}

tree::TerminalNode* HelloParser::ConstDefContext::LeftBracket(size_t i) {
  return getToken(HelloParser::LeftBracket, i);
}

std::vector<tree::TerminalNode *> HelloParser::ConstDefContext::IntConst() {
  return getTokens(HelloParser::IntConst);
}

tree::TerminalNode* HelloParser::ConstDefContext::IntConst(size_t i) {
  return getToken(HelloParser::IntConst, i);
}

std::vector<tree::TerminalNode *> HelloParser::ConstDefContext::RightBracket() {
  return getTokens(HelloParser::RightBracket);
}

tree::TerminalNode* HelloParser::ConstDefContext::RightBracket(size_t i) {
  return getToken(HelloParser::RightBracket, i);
}


size_t HelloParser::ConstDefContext::getRuleIndex() const {
  return HelloParser::RuleConstDef;
}


std::any HelloParser::ConstDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitConstDef(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::ConstDefContext* HelloParser::constDef() {
  ConstDefContext *_localctx = _tracker.createInstance<ConstDefContext>(_ctx, getState());
  enterRule(_localctx, 8, HelloParser::RuleConstDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(HelloParser::Ident);
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HelloParser::LeftBracket) {
      setState(89);
      match(HelloParser::LeftBracket);
      setState(90);
      match(HelloParser::IntConst);
      setState(91);
      match(HelloParser::RightBracket);
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(97);
    match(HelloParser::Assign);
    setState(98);
    constInitVal();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstInitValContext ------------------------------------------------------------------

HelloParser::ConstInitValContext::ConstInitValContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::ConstExpContext* HelloParser::ConstInitValContext::constExp() {
  return getRuleContext<HelloParser::ConstExpContext>(0);
}

tree::TerminalNode* HelloParser::ConstInitValContext::LeftBrace() {
  return getToken(HelloParser::LeftBrace, 0);
}

tree::TerminalNode* HelloParser::ConstInitValContext::RightBrace() {
  return getToken(HelloParser::RightBrace, 0);
}

std::vector<HelloParser::ConstInitValContext *> HelloParser::ConstInitValContext::constInitVal() {
  return getRuleContexts<HelloParser::ConstInitValContext>();
}

HelloParser::ConstInitValContext* HelloParser::ConstInitValContext::constInitVal(size_t i) {
  return getRuleContext<HelloParser::ConstInitValContext>(i);
}

std::vector<tree::TerminalNode *> HelloParser::ConstInitValContext::Comma() {
  return getTokens(HelloParser::Comma);
}

tree::TerminalNode* HelloParser::ConstInitValContext::Comma(size_t i) {
  return getToken(HelloParser::Comma, i);
}


size_t HelloParser::ConstInitValContext::getRuleIndex() const {
  return HelloParser::RuleConstInitVal;
}


std::any HelloParser::ConstInitValContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitConstInitVal(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::ConstInitValContext* HelloParser::constInitVal() {
  ConstInitValContext *_localctx = _tracker.createInstance<ConstInitValContext>(_ctx, getState());
  enterRule(_localctx, 10, HelloParser::RuleConstInitVal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HelloParser::IntConst:
      case HelloParser::FloatConst: {
        enterOuterAlt(_localctx, 1);
        setState(100);
        constExp();
        break;
      }

      case HelloParser::LeftBrace: {
        enterOuterAlt(_localctx, 2);
        setState(101);
        match(HelloParser::LeftBrace);
        setState(110);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 4707284156416) != 0)) {
          setState(102);
          constInitVal();
          setState(107);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == HelloParser::Comma) {
            setState(103);
            match(HelloParser::Comma);
            setState(104);
            constInitVal();
            setState(109);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(112);
        match(HelloParser::RightBrace);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardeclContext ------------------------------------------------------------------

HelloParser::VardeclContext::VardeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::BTypeContext* HelloParser::VardeclContext::bType() {
  return getRuleContext<HelloParser::BTypeContext>(0);
}

tree::TerminalNode* HelloParser::VardeclContext::Semi() {
  return getToken(HelloParser::Semi, 0);
}

std::vector<HelloParser::VarDefContext *> HelloParser::VardeclContext::varDef() {
  return getRuleContexts<HelloParser::VarDefContext>();
}

HelloParser::VarDefContext* HelloParser::VardeclContext::varDef(size_t i) {
  return getRuleContext<HelloParser::VarDefContext>(i);
}

std::vector<HelloParser::VarDefArrayContext *> HelloParser::VardeclContext::varDefArray() {
  return getRuleContexts<HelloParser::VarDefArrayContext>();
}

HelloParser::VarDefArrayContext* HelloParser::VardeclContext::varDefArray(size_t i) {
  return getRuleContext<HelloParser::VarDefArrayContext>(i);
}

std::vector<tree::TerminalNode *> HelloParser::VardeclContext::Comma() {
  return getTokens(HelloParser::Comma);
}

tree::TerminalNode* HelloParser::VardeclContext::Comma(size_t i) {
  return getToken(HelloParser::Comma, i);
}


size_t HelloParser::VardeclContext::getRuleIndex() const {
  return HelloParser::RuleVardecl;
}


std::any HelloParser::VardeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitVardecl(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::VardeclContext* HelloParser::vardecl() {
  VardeclContext *_localctx = _tracker.createInstance<VardeclContext>(_ctx, getState());
  enterRule(_localctx, 12, HelloParser::RuleVardecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    bType();
    setState(118);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(116);
      varDef();
      break;
    }

    case 2: {
      setState(117);
      varDefArray();
      break;
    }

    default:
      break;
    }
    setState(127);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HelloParser::Comma) {
      setState(120);
      match(HelloParser::Comma);
      setState(123);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
      case 1: {
        setState(121);
        varDef();
        break;
      }

      case 2: {
        setState(122);
        varDefArray();
        break;
      }

      default:
        break;
      }
      setState(129);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(130);
    match(HelloParser::Semi);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDefArrayContext ------------------------------------------------------------------

HelloParser::VarDefArrayContext::VarDefArrayContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HelloParser::VarDefArrayContext::Ident() {
  return getToken(HelloParser::Ident, 0);
}

std::vector<tree::TerminalNode *> HelloParser::VarDefArrayContext::LeftBracket() {
  return getTokens(HelloParser::LeftBracket);
}

tree::TerminalNode* HelloParser::VarDefArrayContext::LeftBracket(size_t i) {
  return getToken(HelloParser::LeftBracket, i);
}

std::vector<tree::TerminalNode *> HelloParser::VarDefArrayContext::IntConst() {
  return getTokens(HelloParser::IntConst);
}

tree::TerminalNode* HelloParser::VarDefArrayContext::IntConst(size_t i) {
  return getToken(HelloParser::IntConst, i);
}

std::vector<tree::TerminalNode *> HelloParser::VarDefArrayContext::RightBracket() {
  return getTokens(HelloParser::RightBracket);
}

tree::TerminalNode* HelloParser::VarDefArrayContext::RightBracket(size_t i) {
  return getToken(HelloParser::RightBracket, i);
}

tree::TerminalNode* HelloParser::VarDefArrayContext::Assign() {
  return getToken(HelloParser::Assign, 0);
}

HelloParser::ConstInitValArrayContext* HelloParser::VarDefArrayContext::constInitValArray() {
  return getRuleContext<HelloParser::ConstInitValArrayContext>(0);
}


size_t HelloParser::VarDefArrayContext::getRuleIndex() const {
  return HelloParser::RuleVarDefArray;
}


std::any HelloParser::VarDefArrayContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloVisitor*>(visitor))
    return parserVisitor->visitVarDefArray(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::VarDefArrayContext* HelloParser::varDefArray() {
  VarDefArrayContext *_localctx = _tracker.createInstance<VarDefArrayContext>(_ctx, getState());
  enterRule(_localctx, 14, HelloParser::RuleVarDefArray);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    match(HelloParser::Ident);
    setState(133);
    match(HelloParser::LeftBracket);
    setState(134);
    match(HelloParser::IntConst);
    setState(135);
    match(HelloParser::RightBracket);
    setState(141);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HelloParser::LeftBracket) {
      setState(136);
      match(HelloParser::LeftBracket);
      setState(137);
      match(HelloParser::IntConst);
      setState(138);
      match(HelloParser::RightBracket);
      setState(143);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(146);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HelloParser::Assign) {
      setState(144);
      match(HelloParser::Assign);
      setState(145);
      constInitValArray();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstInitValArrayContext ------------------------------------------------------------------

HelloParser::ConstInitValArrayContext::ConstInitValArrayContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HelloParser::ConstInitValArrayContext::LeftBrace() {
  return getToken(HelloParser::LeftBrace, 0);
}

tree::TerminalNode* HelloParser::ConstInitValArrayContext::RightBrace() {
  return getToken(HelloParser::RightBrace, 0);
}

std::vector<HelloParser::ConstInitValContext *> HelloParser::ConstInitValArrayContext::constInitVal() {
  return getRuleContexts<HelloParser::ConstInitValContext>();
}

HelloParser::ConstInitValContext* HelloParser::ConstInitValArrayContext::constInitVal(size_t i) {
  return getRuleContext<HelloParser::ConstInitValContext>(i);
}
